# group-robust_machine_unlearning

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
method/: engine.py  metrics.py  utils.py
method/approaches/: __init__.py  bad_teacher.py  boundary_exp.py  boundary_sh.py  dro.py  iu.py  l1_sparse.py  miu.py  pretraining.py  salun.py  scrub.py  ssd.py  target_reweight.py
method/configs/: const.py  parser.py
method/configs/config_files/: fallback.yaml
method/configs/config_files/celeba/resnet18/: dro_pretrain.yaml  dro_retrain.yaml  pretrain.yaml  retrain.yaml  target_reweight_retrain.yaml
method/configs/config_files/celeba/resnet18/bias_0_0.1/: miu.yaml  rw_miu.yaml
method/configs/config_files/celeba/resnet18/bias_0_0.5/: miu.yaml  rw_miu.yaml  salun.yaml  target_reweight_l1_sparse.yaml
method/configs/config_files/celeba/resnet18/bias_0_0.9/: l1_sparse.yaml  miu.yaml  rw_miu.yaml  target_reweight_salun.yaml  target_reweight_scrub.yaml
method/configs/config_files/fairface/resnet18/: dro_pretrain.yaml  pretrain.yaml  retrain.yaml  target_reweight_retrain.yaml
method/configs/config_files/fairface/resnet18/bias_0_0.1/: miu.yaml  rw_miu.yaml  target_reweight_salun.yaml  target_reweight_scrub.yaml
method/configs/config_files/multinli/bert/: retrain.yaml
method/configs/config_files/waterbird/resnet18/: dro_pretrain.yaml  dro_retrain.yaml  pretrain.yaml  retrain.yaml  target_reweight_retrain.yaml
method/dataset/: __init__.py  dataset_classes.py  dataset_utils.py
method/models/: models_utils.py
(+29 files in other folders)
